--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+Title: Alexander's Oasis
+Description: Feel free to bookmark this webpage for more update on projects and frameworks 
