--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "author": "alexander",
   "license": "ISC",
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.29.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-import": "^2.23.4",
     "hint": "^6.1.4",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
